# RLDSbench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md
examples/: README.md  demo_hdf5.h5  sample_audit_report.json
examples/demo_jsonl/: episodes.jsonl  metadata.json
examples/demo_rlds_lite/: dataset_info.json
robot_dataset_tools/: __init__.py  cli.py  errors.py  models.py  registry.py
robot_dataset_tools/audit/: __init__.py  report.py  schema.py  statistics.py
robot_dataset_tools/benchmark/: runner.py
robot_dataset_tools/convert/: correctness.py  engine.py
robot_dataset_tools/io/: base.py  detect.py  hdf5.py  jsonl.py  lerobot.py  rlds.py  robodm.py
robot_dataset_tools/utils/: arrays.py  hashing.py  memory.py  sampling.py
robot_dataset_tools/visualize/: trajectories.py
scripts/: create_demo_data.py
tests/: conftest.py  test_audit_report.py  test_benchmark.py  test_cli.py  test_conversion_correctness.py  test_detect.py  test_edge_cases.py  test_hardening.py  test_hdf5_adapter.py  test_lerobot_adapter.py  test_rlds_adapter.py  test_robodm_adapter.py  test_visualization.py
